6912065: final fields in objects need to support inlining optimizations for JSR 292

Reviewed-by: twisti, kvn